--- a/FrontendApp/package.json
+++ b/FrontendApp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "ethers": "^5.7.2",
+    "marked": "^16.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
